# ec2-existing-vpc-dynamodb-configuration

./: .gitignore  README.md  app.py  cdk.context.json  instances.json  pyproject.toml
ec2_exsiting_vpc_dynamo_configuration/: __init__.py  constructs.py  ec2_exsiting_vpc_dynamo_configuration_stack.py  stacks.py
tests/unit/: test_ec2_exsiting_vpc_dynamo_configuration_stack.py
