[tool.poetry]
name = "slack-shadow-event-app"
version = "0.1.0"
description = "Slack application for facilitating shadowing opportunities as Amazon"
authors = ["Galen Dunkleberger <awsgalen@amazon.com>"]

[[tool.poetry.source]]
name = "default"
url = "https://amazon-149122183214.d.codeartifact.us-west-2.amazonaws.com/pypi/shadow-buddy/simple"
default = true


[tool.poetry.dependencies]
python="^3.9"
"aws-cdk.core" = "^1.129.0"
"aws-cdk.pipelines" = "^1.129.0"
"aws-cdk.aws-codepipeline" = "^1.129.0"
"aws-cdk.aws-codepipeline-actions" = "^1.129.0"
"aws-cdk.aws-codecommit" = "^1.129.0"
"aws-cdk.aws-iam" = "^1.129.0"
"aws-cdk.aws-lambda" = "^1.129.0"
boto3 = "^1.19.4"
toml = "^0.10.2"
slack-sdk = "^3.11.2"
"aws-cdk.aws-apigatewayv2" = "^1.129.0"
"aws-cdk.aws-apigatewayv2-integrations" = "^1.129.0"
"aws-cdk.aws-dynamodb" = "^1.129.0"
pytz = "^2021.3"
cerberus = "^1.3.4"
"aws-cdk.aws-lambda-event-sources" = "^1.129.0"
"aws-cdk.aws-apigatewayv2-authorizers" = "^1.129.0"
"aws-cdk.aws-cloudfront-origins" = "^1.129.0"
"aws-cdk.aws-s3-deployment" = "^1.129.0"
"aws-cdk.aws-ses" = "^1.129.0"
"aws-cdk.aws-ses-actions" = "^1.129.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
moto = "^2.2.10"




[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
